--- a/index.css
+++ b/index.css
@@ -287,3 +287,12 @@ h3 {
 .blockquote {
     color: #ffff;
 }
+.loader {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+    z-index: 9999;
+    background-color: blue;
+}
