--- a/index.css
+++ b/index.css
@@ -297,13 +297,17 @@ h3 {
     background-color: #ffff;
 }
 .loaderIcon{
-    border: 16px solid #f3f3f3;
+    border: 20px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 16px solid #3498db;
+    border-top: 20px solid #000000;
     width: 120px;
     height: 120px;
-    -webkit-animation: spin 2s linear infinite; /* Safari */
-    animation: spin 2s linear infinite;
+    -webkit-animation: spin 1.5s linear infinite; /* Safari */
+    animation: spin 1.5s linear infinite;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
   }
   
   /* Safari */
