--- a/index.css
+++ b/index.css
@@ -305,6 +305,7 @@ h3 {
     -webkit-animation: spin 1.5s linear infinite; /* Safari */
     animation: spin 1.5s linear infinite;
     display: block;
+    margin-top: 50%;
     margin-left: auto;
     margin-right: auto;
     
