--- a/index.css
+++ b/index.css
@@ -50,6 +50,7 @@ li,
 .lead,
 .navbar-brand {
     color: #ffff !important;
+    color: white;
 }
 
 #landing_page_img {
@@ -94,6 +95,7 @@ li,
     padding: 0;
     height: auto;
     color: #ffff;
+    color: white;
     -webkit-transition: background-color 1s;
     /* For Safari 3.1 to 6.0 */
     transition: background-color 1s;
@@ -106,6 +108,7 @@ li,
 
 h3 {
     color: #ffff !important;
+    color: white;
 }
 
 .projects-left-header {
@@ -113,6 +116,7 @@ h3 {
     padding: 0;
     height: auto;
     color: #ffff;
+    color: white;
     -webkit-transition: background-color 1s;
     /* For Safari 3.1 to 6.0 */
     transition: background-color 1s;
@@ -131,6 +135,7 @@ h3 {
     padding: 0;
     height: auto;
     color: #ffff;
+    color: white;
     -webkit-transition: background-color 1s;
     /* For Safari 3.1 to 6.0 */
     transition: background-color 1s;
@@ -145,6 +150,7 @@ h3 {
     padding: 0;
     height: auto;
     color: #ffff;
+    color: white;
     -webkit-transition: background-color 1s;
     /* For Safari 3.1 to 6.0 */
     transition: background-color 1s;
@@ -160,6 +166,7 @@ h3 {
     padding: 0;
     height: auto;
     color: #ffff;
+    color: white;
     -webkit-transition: background-color 1s;
     /* For Safari 3.1 to 6.0 */
     transition: background-color 1s;
@@ -174,6 +181,7 @@ h3 {
     padding: 0;
     height: auto;
     color: #ffff;
+    color: white;
     -webkit-transition: background-color 1s;
     /* For Safari 3.1 to 6.0 */
     transition: background-color 1s;
@@ -188,6 +196,7 @@ h3 {
     padding: 0;
     height: auto;
     color: #ffff;
+    color: white;
     -webkit-transition: background-color 1s;
     /* For Safari 3.1 to 6.0 */
     transition: background-color 1s;
@@ -203,6 +212,7 @@ h3 {
     padding: 0;
     height: auto;
     color: #ffff;
+    color: white;
     -webkit-transition: background-color 1s;
     /* For Safari 3.1 to 6.0 */
     transition: background-color 1s;
@@ -217,6 +227,7 @@ h3 {
     padding: 0;
     height: auto;
     color: #ffff;
+    color: white;
     -webkit-transition: background-color 1s;
     /* For Safari 3.1 to 6.0 */
     transition: background-color 1s;
@@ -231,6 +242,7 @@ h3 {
     padding: 0;
     height: auto;
     color: #ffff;
+    color: white;
     -webkit-transition: background-color 1s;
     /* For Safari 3.1 to 6.0 */
     transition: background-color 1s;
@@ -246,6 +258,7 @@ h3 {
     padding: 0;
     height: auto;
     color: #ffff;
+    color: white;
     -webkit-transition: background-color 1s;
     /* For Safari 3.1 to 6.0 */
     transition: background-color 1s;
@@ -260,6 +273,7 @@ h3 {
     padding: 0;
     height: auto;
     color: #ffff;
+    color: white;
     -webkit-transition: background-color 1s;
     /* For Safari 3.1 to 6.0 */
     transition: background-color 1s;
@@ -282,10 +296,12 @@ h3 {
 
 .fa {
     color: #ffff;
+    color: white;
 }
 
 .blockquote {
     color: #ffff;
+    color: white;
 }
 .loader {
 	position: fixed;
@@ -295,6 +311,7 @@ h3 {
 	height: 100%;
     z-index: 9999;
     background-color: #ffff;
+    background-color: white;
     border: solid;
     border-width: 16px;
     border-color: #000000;
