--- a/index.css
+++ b/index.css
@@ -71,6 +71,9 @@ li,
     opacity: 0.7;
     box-shadow: 0px 0.3px #ffff;
     position: fixed;
+    right: 0;
+    left: 0;
+    z-index: 1030;
 }
 
 .center {
