--- a/index.css
+++ b/index.css
@@ -5,13 +5,13 @@
 /* unvisited link */
 
 a:link {
-    color: #adadad;
+    color: red;
 }
 
 /* visited link */
 
 a:visited {
-    color: #adadad;
+    color: red;
 }
 
 /* mouse over link */
@@ -26,54 +26,48 @@ a:active {
     color: #ffff;
 }
 
-.container,
-br {
-    background-color: #000000;
-    /*background: linear-gradient(to right, , #64485c);*/
-}
 
-body {
-    background-color: #000000;
-    /* background: linear-gradient(to right, #2e1114, #64485c);*/
-}
-
-#navbarNav {
-    opacity: 0.9;
-}
-
-p,
-h1,
-h2,
-h4,
-li,
-.display-3,
 .lead,
 .navbar-brand {
     color: #ffff !important;
-    color: white;
 }
 
-#landing_page_img {
-    -webkit-mask-image: -webkit-gradient(linear, left 80%, left bottom, from(rgba(0, 0, 0, 1)), to(rgba(0, 0, 0, 0)));
-    mask-image: gradient(linear, left 80%, left bottom, from(rgba(0, 0, 0, 1)), to(rgba(0, 0, 0, 0)));
-}
 
+.landing-image{
+    background-image: url("src/assets/website-coverimage2.png");
+    height: 30rem;
+    background-size: contain;
+    width: 120%;
+    background-repeat: no-repeat;
+    margin-left: -4rem;
+    margin-right: -4rem;
+}
+.landing-text{
+    position: absolute;
+    top: 5rem;
+    background: -webkit-linear-gradient(#333, rgb(192, 190, 190));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 .nav-link {
     color: #ffff;
 }
 
 .nav-link:hover {
-    color: #000000;
+    color: #32228a;
     cursor: pointer;
 }
 
 .navbar.navbar-default {
-    background-color: #404040;
+    background-color: #ffffff;
     opacity: 0.7;
     box-shadow: 0px 0.3px #ffff;
 }
-
+.navbar-toggler{
+    background-color: grey !important;
+}
 .center {
+    text-align: center;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -281,15 +275,8 @@ h3 {
     transition: background-color 1s;
 }
 
-.sammy-right-header:hover {
-    background-color: #000000;
-}
-
 .img_ {
-    -webkit-filter: grayscale(100%);
-    /* Safari 6.0 - 9.0 */
-    filter: grayscale(100%);
-    box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(253, 253, 253, 0.19);
+
     opacity: 0.6;
     display: block;
     margin-left: auto;
@@ -298,7 +285,6 @@ h3 {
 
 .fa {
     color: #ffff;
-    color: white;
 }
 
 .blockquote {
@@ -314,9 +300,6 @@ h3 {
     z-index: 9999;
     background-color: #ffff;
     background-color: white;
-    border: solid;
-    border-width: 16px;
-    border-color: #000000;
     -webkit-transition: background-color 6s;
     transition: background-color 6s;
 }
@@ -326,7 +309,6 @@ h3 {
 .loaderIcon{
     border: 20px solid #f3f3f3;
     border-radius: 50%;
-    border-top: 20px solid #000000;
     width: 120px;
     height: 120px;
     -webkit-animation: spin 1.5s linear infinite; /* Safari */
