--- a/index.css
+++ b/index.css
@@ -6,12 +6,12 @@ html,body
     width: 100%;
     height: 100%;
     margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
+    padding: 0px !important;
+    overflow-x: hidden !important; 
 }
 
-a{
-
+h1{
+    text-align: center;
 }
 .navbar-brand {
     color: #333 !important;
@@ -21,28 +21,34 @@ a{
     background-image: url("src/assets/website-coverimage2.png");
     height: 30rem;
     background-size: cover;
-    width: auto;
+    width: 100%;
     background-repeat: no-repeat;
-    margin-left: -4rem;
-    margin-right: -4rem;
+   /* margin-left: -4rem;
+    margin-right: -4rem; */
     z-index: 22;
      
 }
+.col-sm-12{
+    padding-right: 0 !important;
+    padding-left: 0 !important;
+}
+.row{
+    margin-right: 0 !important;
+}
 .landing-text{
-    position: absolute;
+    
     top: 5rem;
     background: -webkit-linear-gradient(#333, rgb(192, 190, 190));
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 .landing-text-sub{
-    position: absolute;
-    top: 10rem;
+        top: 10rem;
     background: -webkit-linear-gradient(rgb(192, 190, 190),rgb(212, 210, 210) );
+    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-}
-.nav-link {
 }
 
 .nav-link:hover {
@@ -68,6 +74,7 @@ a{
 .section-link-out{
    margin-top: -1rem;
     background-color: #0d0d0d;
+    width: 100%;
 }
 .container{
     background-color: #0d0d0d;
@@ -79,33 +86,13 @@ a{
     background-color: #f4f8fc;
     margin-bottom: 2rem;
 }
-.embed-responsive {
-    position: relative;
-    display: block;
-    height: 0;
-    padding: 0;
-    overflow: hidden;
-}
+
 
 .ul {
     list-style-type: disc;
 }
 
-.projects-section-title {
-    background-color: #adadad;
-    padding: 0;
-    height: auto;
-    color: #ffff;
-    color: white;
-    -webkit-transition: background-color 1s;
-    /* For Safari 3.1 to 6.0 */
-    transition: background-color 1s;
-    box-shadow: 0px 5px #ffff;
-}
 
-.projects-section-title:hover {
-    background-color: #404040;
-}
 
 h3 {
     color: #ffff !important;
@@ -129,14 +116,4 @@ footer{
     .landing-text-sub{
         display: none;
     }
-  }
-  /* Safari */
-  @-webkit-keyframes spin {
-    0% { -webkit-transform: rotate(0deg); }
-    100% { -webkit-transform: rotate(360deg); }
-  }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
   }
